gccida/g3/canon_true_dependence
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canon_true_dependence/src/alias.c:2567:38: error: must use 'enum' tag to refer to type 'machine_mode'
int  canon_true_dependence( rtx mem, machine_mode mem_mode, rtx mem_addr, rtx x, int ( *varies)( rtx, int)) 
                                     ^
                                     enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canon_true_dependence/src/alias.c:2583:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( __int64 *)mem[1]; 
                  ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canon_true_dependence/src/alias.c:2586:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( __int64 *)x[1]; 
                  ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canon_true_dependence/src/alias.c:2609:42: error: use of undeclared identifier 'machine_mode'
if ( !base_alias_check( rtx, mem_addr, ( machine_mode)*( ( unsigned __int8 *)x + 2), mem_mode) ) 
                                         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canon_true_dependence/src/obj/alias.o] Error 1
